--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-alias(libs.plugins.android.application) apply false
-}
-
-allprojects {
+id 'com.android.application' version '8.8.2' apply false
 }
