--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation "com.google.android.material:material:1.11.0"
 }
